--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./build/src/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "dev": "ts-node-dev ./src/server.ts",
     "migrations": "tsc && node ./build/src/database/migrations/Migrations.js"
   },
   "repository": {
@@ -25,16 +25,18 @@
     "@types/express": "^4.17.14",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.8.2",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   }
 }
